fixed element alignment login panel

--- a/src/components/login-panel/login-panel.css
+++ b/src/components/login-panel/login-panel.css
@@ -15,7 +15,7 @@
   height: 100%;
   width: 100%;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   border-right: 1px solid #F5F5F5;
 }
 
